[package]
name = "bloom-ipc"
version = "0.1.0"
authors = ["lvqinghao <lvqinghao@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.7"
sawtooth-sdk = "0.4"
zmq = "0.9"
protobuf = "2.16"
serde_json = "1"
rand = "0.4"
uuid = "0.5"
hex = "0.4"
hex-literal = "0.2.1"
rlp = "0.4.5"


