[package]
name = "bloom-ipc"
version = "0.1.0"
authors = ["lvqinghao <lvqinghao@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.7"
rand = "0.4"
uuid = "0.5"
hex = "0.4"
hex-literal = "0.2.1"
rlp = "0.4.5"

serde_json = "1"
protobuf = "2.16"
zmq = "0.9"
nanomsg = "0.7.2"

common-types = { git = "https://github.com/recursive-bloom/common-types", branch = "master"}
ethereum-types = "0.9.2"




